--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -22,14 +22,14 @@ body{
     font-family: "montserrat";
     animation: bganimation 15s infinite;
 }
-
-.text{
-    color: #fff;
-    font-size: 22px;
-    text-align: center;
-    margin: 350px 0;
-    /* text-transform: uppercase; */
-}
+.text {
+      background-image: linear-gradient(to right, orange, purple);
+      -webkit-background-clip: text;
+      color: transparent;
+      font-size: 22px;
+      text-align: center;
+      margin: 350px 0;
+    }
 
 @keyframes bganimation{
     0%{
@@ -43,6 +43,9 @@ body{
     }
 }
     .box {
+      background-image: linear-gradient(to right, orange, purple);
+      -webkit-background-clip: text;
+      color: transparent;
       margin-top: 1em;
     }
     #txtURL {
@@ -58,22 +61,59 @@ body{
     #list a {
       margin: 1em;
     }
-    
+    .btn {
+  flex: 1 1 auto;
+  margin: 10px;
+  padding: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+ /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
+  border-radius: 10px;
+ }
+ 
+/* Demo Stuff End -> */
+ 
+/* <- Magic Stuff Start */
+ 
+.btn:hover {
+  background-position: right center; /* change the direction of the change here */
+}
+ 
+.btn-1 {
+  background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+}
+ 
+.btn-2 {
+  background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+}
+ 
+.btn-3 {
+  width: 85%;
+  background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%);
+}
+ 
+.btn-4 {
+  background-image: linear-gradient(to right, #a1c4fd 0%, #c2e9fb 51%, #a1c4fd 100%);
+}
+ 
+.btn-5 {
+  background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 51%, #ffecd2 100%);
+}
+
   </style>
 </head>
 <body>
-  <div class="box">
-    <input id="txtURL" type="text" value="www.google.com" autofocus>
-  </div>
-  <div class="box">
-    <button id="btnGo">Go</button>
-  </div>
-  <div class="box">
+     <div class="btn btn-1">
     <span>切换线路:</span>
     <select id="selNode"></select>
   </div>
-  <div class="box" id="list">
-  </div>
+  <div class="btn btn-5" id="list">
+</div>
+    <input class="btn btn-3" type="text" value="输入网址(例如abababa.com)" autofocus>
+    <button class="btn btn-2">Go</button>
   <script>
     const PAGE_CONF_SET = 110
     const PAGE_CONF_GET = 111
