--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -95,7 +95,7 @@ body{
 <body>
      <div class="btn btn-1">
     <span>切换线路:</span>
-    <select class="btn btn-4" id="selNode"></select>
+    <select  id="selNode"></select>
   </div>
     <input id="txtURL" class="btn btn-3" type="text" value="输入网址(例如abababa.com)" autofocus>
     <button id="btnGo" class="btn btn-2">Go</button>
