--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -74,11 +74,12 @@ body{
  
 .btn-2 {
   background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+width: 100%;
 }
  
 .btn-3 {
-  width: 85%;
   background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%);
+width: 100%;
 }
  
 .btn-4 {
@@ -97,7 +98,7 @@ body{
     <span>切换线路:</span>
     <select  id="selNode"></select>
   </div>
-    <input id="txtURL" class="btn btn-3" type="text" value="输入网址(例如abababa.com)" autofocus>
+    <input id="txtURL" class="btn btn-3" type="text" placeholder="提示: 输入网址(例如abababa.com)  ,  然后点击'Go'  " autofocus>
     <button id="btnGo" class="btn btn-2">Go</button>
 <div class="btn btn-5" id="list">
 </div>
