--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -108,33 +108,7 @@ width: 95%;
 <div class="btn btn-6">
 <p>该项目基于<a href="https://github.com/EtherDream/jsproxy">jsproxy</a></p>
 <p>jdjwzx233节点均使用 Cloudflare Worker 搭建</p>
-<p>注意:请勿将本系统用于非法用途，否则后果自负!</p>
-<p>-------------------------------分割线--------------------------------</p>
-<h4>目前已知问题(待修复):</h4>
-<p>文件下载对话框取消后 SW 仍在下载（fetch.signal 的 onabort 未触发，可能是浏览器 BUG）
-
-<p>Chrome 图片无法保存</p>
-
-<p>非 UTF8 编码的 JS 会出现乱码（MIME 未指定 charset 的情况下出现）</p>
-
-<p>Google 登陆页无法下一步</p>
-
-<p>Google reCAPTCHA 无法执行</p>
-
-<p>Google Maps 切换到卫星地图后卡死</p>
-
-<p>iOS Safari 无法播放 Youtube 视频</p>
-
-<p>twitter 在 Chrome 普通模式下无法登陆，但隐身模式可以</p>
-
-<p>twitter iframe 经常加载不出来</p>
-
-<p>SVG 脚本没有处理</p>
-
-<p>Youtube 视频全屏播放会卡住</p>
-
-<p>twitch.tv 首页报错（JS 代码修改导致错误，需要在 AST 层面修改）</p>
-<p>-------------------------------分割线--------------------------------</p>
+<p>注意:请勿将本系统用于非法用途，否则后果自负!</p></br>
 本站总访问量<span id="busuanzi_value_site_pv"></span>次 ,
  本站总访客数<span id="busuanzi_value_site_uv"></span>人次
 </div>
