--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -108,9 +108,15 @@ width: 95%;
 <div class="btn btn-6">
 <p>该项目基于<a href="https://github.com/EtherDream/jsproxy">jsproxy</a></p>
 <p>jdjwzx233节点均使用 Cloudflare Worker 搭建</p>
-<p>注意:请勿将本系统用于非法用途，否则后果自负!</p></br>
+<p>注意:请勿将本系统用于非法用途，否则后果自负!</p>
 本站总访问量<span id="busuanzi_value_site_pv"></span>次 ,
- 本站总访客数<span id="busuanzi_value_site_uv"></span>人次
+ 本站总访客数<span id="busuanzi_value_site_uv"></span>人次</br>
+<h3>使用jdjwzx233 Page Sandbox上网的优点：</h3>
+<p>1.安全:不易暴露自身IP，上网更放心</p>
+<p>2.合法:代理上网本身是不违法的,除非你上了不正经的网站,或用代理做了违法的事情</p>
+<p>3.可以上外国网站:大部分的外国网站都可以上</p>
+<p>4.节点多:jdjwzx233 Page Sandbox拥有13个节点，每日可提供300000+次请求</p>
+<p>5.免费:该站点永远不收费！！！</p>
 </div>
   <script>
     const PAGE_CONF_SET = 110
