--- a/assets/auto/index.html
+++ b/assets/auto/index.html
@@ -73,6 +73,11 @@ if(getQueryVariable("gotourl")!=false && b>=autourl.length){
     var str=getQueryVariable("gotourl");
     str.replace("-----","");
     window.location.replace(document.getElementById("url1").innerText+"-----"+str);
+}else if(getQueryVariable("gosite")!=false && b>=autourl.length){
+    var str=getQueryVariable("gosite");
+    str=window.atob(str);
+    str.replace("-----","");
+    window.location.replace(document.getElementById("url1").innerText+"-----"+str);
 }
 }
 function run(){for(var i=1;i<autourl.length;i++)document.write("<img src=https://"+autourl[i]+"/"+Math.random()+" width=1 height=1 onerror=auto('https://"+autourl[i]+"/',"+i+")>")}
